[package]
name = "dbc-ipher"
version = "0.1.0"
description = "a terminal based dbc editor"
authors = ["Jacob Gervais"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.2"
dbc-rs = "0.5.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
